--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,31 +20,10 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
+          # components: rust-src
           override: true
 
-      - name: Pre-installing grcov
-        uses: actions-rs/install@v0.1
-        with:
-          crate: grcov
-          use-tool-cache: true
-
-      - name: Execute tests
+      - name: Build
         uses: actions-rs/cargo@v1
         with:
-          command: test
-          # args:
-        env:
-          CARGO_INCREMENTAL: 0
-          RUSTFLAGS: "-Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort"
-          RUSTDOCFLAGS: "-Cpanic=abort"
-
-      - name: Gather coverage data
-        id: coverage
-        uses: actions-rs/grcov@v0.1
-
-      - name: Codecov upload
-        if: ${{ matrix.os == 'ubuntu-latest' }}
-        uses: codecov/codecov-action@v1
-        with:
-          file: ${{ steps.coverage.outputs.report }}
-          fail_ci_if_error: true
+          command: build
