--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
-          components: clippy, rust-src
+          components: rust-src
           override: true
 
       - uses: actions-rs/clippy-check@v1
